plugins/JavaFX/testData/highlighting/LargeInteger.fx
var a = 0;
a = 2147483647;
a = -2147483648;
a = <error descr="Integer number too large">2147483648</error>;
a = <error descr="Integer number too large">-2147483649</error>;